Closed Bug 820496 Opened 13 years ago Closed 13 years ago

In print preview, background bottom moves when scrolling

Categories

(Core :: Print Preview, defect)

18 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla20
Tracking Status
firefox17 --- unaffected
firefox18 - wontfix
firefox19 - verified
firefox20 - verified

People

(Reporter: alice0775, Assigned: roc)

References

Details

(Keywords: regression, testcase)

Attachments

(4 files)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/4dfe323a663d Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121211 Firefox/20.0 ID:20121211030855 http://hg.mozilla.org/releases/mozilla-aurora/rev/c042ea08a2b4 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20121211 Firefox/19.0 ID:20121211042015 See reports http://forums.mozillazine.org/viewtopic.php?p=12540791#p12540791 Steps to reproduce: 1) Check Page Setup > Print background 2) Open http://www.tizag.com/htmlT/htmlbackground.php 3) Select Print Preview Actual Result: [1] there is white rectangle on the right: http://i.imgur.com/tUQ6B.jpg --- Bug 820494 [2] Blue background moves downwards when I'm scrolling down. --- This bug. There are 2 regressions. #1 No backbround color in print preview --- Regressed by Bug 792314 and Fixed by Bug 816603 except [1] --- Bug 820494 #2 Graphical glich in print preview when scroll --- Regressed by Bug 811570 and Fixed by Bug 812107 except [2]. --- I Will file separate bug
Keywords: regression
oops, >#2 Graphical glich in print preview when scroll > --- Regressed by Bug 811570 and Fixed by Bug 812107 except [2]. --- I Will file separate bug #2 Graphical glich in print preview when scroll --- Regressed by Bug 811570 and Fixed by Bug 812107 except [2]. --- this bug
Blocks: 810186
No longer blocks: 811570
I can also reproduce In 18Beta.
Version: 19 Branch → 18 Branch
(In reply to Alice0775 White from comment #3) > I can also reproduce In 18Beta. So, root cause is Bug 792314 and Bug 794709 ?
Attached file testcase
Reduced testcase is simple enough...
Assignee: nobody → roc
Keywords: testcase
Summary: in print preview, background color moves downwards when I'm scrolling down → In print preview, background bottom moves when scrolling
Not tracking it for release considering it's not a blocker for release based on the user scenario described . Please feel free to renominate if the issue is widely seen
Attached patch fixSplinter Review
Attachment #692888 - Flags: review?(matt.woodrow)
Comment on attachment 692888 [details] [diff] [review] fix Review of attachment 692888 [details] [diff] [review]: ----------------------------------------------------------------- ::: layout/generic/nsPageFrame.cpp @@ +547,5 @@ > // happens after we've built the list so that AddCanvasBackgroundColorItem > // can monkey with the contents if necessary. > + nsRect backgroundRect = > + nsRect(child->GetOffsetToCrossDoc(aBuilder->FindReferenceFrameFor(child)), > + child->GetSize()); Just aBuilder->ToReferenceFrame(child) should work here right?
Attachment #692888 - Flags: review?(matt.woodrow) → review+
Comment on attachment 692888 [details] [diff] [review] fix [Approval Request Comment] Bug caused by (feature/regressing bug #): 792314 (ultimately DLBI) User impact if declined: incorrectly drawn background color in print preview, if background colors are turned on in Page Setup (so, not common) Testing completed (on m-c, etc.): just landed on inbound Risk to taking this patch (and alternatives if risky): This is a pretty small, focused and safe patch. Very likely the worst that could happen is that we draw the background differently wrong. String or UUID changes made by this patch: none
Attachment #692888 - Flags: approval-mozilla-beta?
Attachment #692888 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment on attachment 692888 [details] [diff] [review] fix We wouldn't chemspill for this issue, the user impact isn't absolutely critical, and we therefore shouldn't try to get this into our last beta. Approving for Aurora, however.
Attachment #692888 - Flags: approval-mozilla-beta?
Attachment #692888 - Flags: approval-mozilla-beta-
Attachment #692888 - Flags: approval-mozilla-aurora?
Attachment #692888 - Flags: approval-mozilla-aurora+
Attached image Screenshot
Verified fixed on FF 19.3 on Windows 7 x64. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0(20130123083802)
Attached image Screenshot
I confirm the fix is verified on FF 20b5 too: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0(20130313170052)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: