Bug 820496. Put bounds in correct coordinate system when setting up the canvas background for a page. r=mattwoodrow