layout/generic/nsPageFrame.cpp
@@ -546,7 +546,8 @@ nsPageFrame::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
   // Add the canvas background color to the bottom of the list. This
   // happens after we've built the list so that AddCanvasBackgroundColorItem
   // can monkey with the contents if necessary.
-  nsRect backgroundRect = nsRect(nsPoint(0, 0), child->GetSize());
+  nsRect backgroundRect =
+    nsRect(aBuilder->ToReferenceFrame(child), child->GetSize());
   rv = PresContext()->GetPresShell()->AddCanvasBackgroundColorItem(
          *aBuilder, content, child, backgroundRect, NS_RGBA(0,0,0,0));
 
